[gd_scene load_steps=8 format=3 uid="uid://sv47lnemnjnc"]

[ext_resource type="Script" path="res://core/ui/pause_menu/pause_screen.gd" id="1_ba3h2"]
[ext_resource type="Theme" uid="uid://dtej56pljgyf2" path="res://assets/ui_theme/temp_theme.tres" id="2_23tle"]
[ext_resource type="PackedScene" uid="uid://3u6ci5l75476" path="res://core/ui/feature_button.tscn" id="4_qiia4"]
[ext_resource type="PackedScene" uid="uid://d0jvtutoqnwm" path="res://core/ui/options_menu/options_menu.tscn" id="5_15wcu"]

[sub_resource type="Animation" id="Animation_x85kf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Screen/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(426, 174)]
}

[sub_resource type="Animation" id="Animation_6238j"]
resource_name = "slide_on_to_screen"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Screen/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(810, 1200), Vector2(810, 390)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6pqbd"]
_data = {
"RESET": SubResource("Animation_x85kf"),
"slide_on_to_screen": SubResource("Animation_6238j")
}

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ba3h2")

[node name="Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_23tle")

[node name="ConfirmBackground" type="ColorRect" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Screen"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -534.0
offset_top = -366.0
offset_right = -234.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="RESUME_Button" parent="Screen/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "RESUME"

[node name="OPTIONS_Button" parent="Screen/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "OPTIONS"

[node name="EXIT_Button" parent="Screen/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "TO MAIN MENU"

[node name="DEBUG_Button" parent="Screen/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "DEBUG MENU"

[node name="ExitConfirmation" type="Control" parent="Screen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmBackground" type="ColorRect" parent="Screen/ExitConfirmation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Screen/ExitConfirmation"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -50.0
offset_right = 175.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/ExitConfirmation/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/ExitConfirmation/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Are you sure?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CONFIRM_Button" parent="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_qiia4")]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "YES"

[node name="CANCEL_Button" parent="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_qiia4")]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "NO"

[node name="DebugMenu" type="Control" parent="Screen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmBackground" type="ColorRect" parent="Screen/DebugMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Screen/DebugMenu"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -50.0
offset_right = 175.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/DebugMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/DebugMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="TELEPORT_Button" parent="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "TELEPORT"

[node name="POWER_Button" parent="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "AREA POWER"

[node name="RETURN_Debug_Button" parent="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "⬅️RETURN"

[node name="OptionsMenu" parent="Screen" instance=ExtResource("5_15wcu")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="TeleportMenu" type="Control" parent="Screen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screen/TeleportMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Screen/TeleportMenu"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/TeleportMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/TeleportMenu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Level_Teleport_Input" type="LineEdit" parent="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
placeholder_text = "Input Level Name"
caret_blink = true

[node name="Door_ID_Teleport_Input" type="LineEdit" parent="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
placeholder_text = "Input Door ID"
caret_blink = true

[node name="CONFIRM_Teleport_Button" parent="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "CONFIRM"

[node name="RETURN_Teleport_Button" parent="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "⬅️RETURN"

[node name="Panel2" type="Panel" parent="Screen/TeleportMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 163.0
offset_top = 118.0
offset_right = -1385.0
offset_bottom = -212.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/TeleportMenu/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Areas" type="Label" parent="Screen/TeleportMenu/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Areas:"
horizontal_alignment = 1

[node name="hub_area" type="Label" parent="Screen/TeleportMenu/Panel2/VBoxContainer"]
layout_mode = 2
tooltip_text = "Doors:
0 North Checkpoint"
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "hub_area"
horizontal_alignment = 1

[node name="checkpoint_north" type="Label" parent="Screen/TeleportMenu/Panel2/VBoxContainer"]
layout_mode = 2
tooltip_text = "Doors:
0 Security
1 Living Area
2 Hub Area"
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "checkpoint_north"
horizontal_alignment = 1

[node name="living_area" type="Label" parent="Screen/TeleportMenu/Panel2/VBoxContainer"]
layout_mode = 2
tooltip_text = "Doors:
0 North Checkpoint"
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "living_area"
horizontal_alignment = 1

[node name="security" type="Label" parent="Screen/TeleportMenu/Panel2/VBoxContainer"]
layout_mode = 2
tooltip_text = "Doors:
0 North Checkpoint"
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "security"
horizontal_alignment = 1

[node name="PowerMenu" type="Control" parent="Screen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screen/PowerMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel2" type="Panel" parent="Screen/PowerMenu"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/PowerMenu/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RETURN_Power_Button" parent="Screen/PowerMenu/Panel2/VBoxContainer" instance=ExtResource("4_qiia4")]
layout_mode = 2
text = "⬅️RETURN"

[node name="Label" type="Label" parent="Screen/PowerMenu/Panel2/VBoxContainer"]
layout_mode = 2
text = "POWERED AREAS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Screen/PowerMenu/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ManualPowerOptionContainer" type="VBoxContainer" parent="Screen/PowerMenu/Panel2/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6pqbd")
}

[connection signal="pressed" from="Screen/Panel/MarginContainer/VBoxContainer/RESUME_Button" to="." method="resume_game"]
[connection signal="pressed" from="Screen/Panel/MarginContainer/VBoxContainer/OPTIONS_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Screen/Panel/MarginContainer/VBoxContainer/EXIT_Button" to="." method="exit_game"]
[connection signal="pressed" from="Screen/Panel/MarginContainer/VBoxContainer/DEBUG_Button" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer/CONFIRM_Button" to="." method="confirm_exit"]
[connection signal="pressed" from="Screen/ExitConfirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer/CANCEL_Button" to="." method="cancel_exit"]
[connection signal="pressed" from="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer/TELEPORT_Button" to="." method="_on_teleport_button_pressed"]
[connection signal="pressed" from="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer/POWER_Button" to="." method="_on_power_button_pressed"]
[connection signal="pressed" from="Screen/DebugMenu/Panel/MarginContainer/VBoxContainer/RETURN_Debug_Button" to="." method="_on_return_debug_button_pressed"]
[connection signal="text_changed" from="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer/Door_ID_Teleport_Input" to="." method="_on_door_id_teleport_input_text_changed"]
[connection signal="pressed" from="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer/CONFIRM_Teleport_Button" to="." method="_on_confirm_teleport_button_pressed"]
[connection signal="pressed" from="Screen/TeleportMenu/Panel/MarginContainer/VBoxContainer/RETURN_Teleport_Button" to="." method="_on_return_teleport_button_pressed"]
[connection signal="pressed" from="Screen/PowerMenu/Panel2/VBoxContainer/RETURN_Power_Button" to="." method="_on_return_power_button_pressed"]
